# liboai-cpp23

./: .clang-format  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json  xmake.lua
.github/workflows/: ci.yml
cmake/: Config.cmake.in  Install.cmake  Uninstall.cmake.in
cmake/liboai/: portfile.cmake  vcpkg.json
examples/: CMakeLists.txt
examples/audio/: README.md
examples/chat/: README.md
examples/chat/conversation/: README.md
examples/chat/examples/: create_chat_completion.cpp  create_chat_completion_async.cpp  ongoing_user_convo.cpp
examples/completions/: README.md
examples/completions/examples/: generate_completion.cpp
examples/edits/: README.md
examples/embeddings/: README.md
examples/files/: README.md
examples/fine-tunes/: README.md
examples/images/: README.md
examples/models/: README.md
examples/models/examples/: retrieve_model_async.cpp
examples/moderations/: README.md
include/liboai/: liboai.h
include/liboai/components/: audio.h  azure.h  chat.h  completions.h  edits.h  embeddings.h  files.h  fine_tunes.h  images.h  models.h  moderations.h
include/liboai/core/: authorization.h  exception.h  netimpl.h  network.h  response.h
src/components/: audio.cpp  azure.cpp  chat.cpp  chat.cppm  completions.cpp  edits.cpp  embeddings.cpp  files.cpp  files.cppm  fine_tunes.cpp  images.cpp  models.cpp  moderations.cpp
src/core/: authorization.cpp  authorization.cppm  netimpl.cpp  network.cppm  response.cpp
tests/: test_authorization.cpp  test_chat_update.cpp  test_files_download.cpp  test_network_headers.cpp  xmake.lua
